--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,80 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
+@import "~bootstrap/dist/css/bootstrap.css";
+
+.circleOrange 
+{
+  animation: pulse 2s infinite;
+	background: rgb(255, 126, 0);
+	border-radius: 50%;
+	margin: 10px;
+	height: 20px;
+	width: 20px;
+}
+
+.circleGreen 
+{
+  animation: pulse 2s infinite;
+	background: rgb(0, 172, 186);
+	border-radius: 50%;
+	margin: 10px;
+	height: 20px;
+	width: 20px;
+}
+
+.circleOrangeDynamic
+{
+  animation: pulseDynamic 2s infinite;
+	background: rgb(255, 126, 0);
+	border-radius: 50%;
+	margin: 10px;
+	height: 20px;
+	width: 20px;
+}
+
+.circleGreenDynamic 
+{
+  animation: pulseDynamic 2s infinite;
+	background: rgb(0, 172, 186);
+	border-radius: 50%;
+	margin: 10px;
+	height: 20px;
+	width: 20px;
+}
+
+
+@keyframes pulse {
+	0% {
+		transform: scale(0.95) !important;
+		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
+	}
+
+	70% {
+		transform: scale(1) !important;
+		box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+	}
+
+	100% {
+		transform: scale(0.95) !important;
+		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+	}
+}
+
+
+@keyframes pulseDynamic {
+	0% {
+		transform: scale(0.95) !important;
+		box-shadow: 0 0 0 0 rgba(243, 152, 15, 0.699);
+	}
+
+	70% {
+		transform: scale(1) !important;
+		box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+	}
+
+	100% {
+		transform: scale(0.95) !important;
+		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+	}
+}
+
